added mobile contact

--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,11 +1,11 @@
 <section>
   <div class="hero">
-    <div class="hero__lema">
+    <div class="hero__lema" id="teamcontainer">
       <h2>Tejiendo sueños, forjando éxito</h2>
     </div>
   </div>
 </section>
-<section class="teamcontainer" id="teamcontainer">
+<section class="teamcontainer">
   <div>
     <h2 class="teamcontainer__title">Equipo</h2>
     <p class="teamcontainer__text">
@@ -35,7 +35,7 @@
     </div>
     <div class="div2">
       <h3 class="container__name">Debilidades</h3>
-      <p class="container__text">
+      <p class="container__text" id="about-us">
         Siempre se puede mejorar, algunas podemos tener menos experiencia en ciertas áreas, miedo a tener un conflicto
         por estar en desacuerdo, ser mas lentas o tener una organización diferente.
         Pero ante todo somos un equipo y todas remamos hacia delante, si una se atasca el resto tira de ella.
