--- a/src/html/partials/team_adalabers.html
+++ b/src/html/partials/team_adalabers.html
@@ -1,5 +1,5 @@
-<section class="cards">
-  <h2 class="about-title" id="about-us">Quiénes Somos</h2>
+<section class="cards" >
+  <h2 class="about-title">Quiénes Somos</h2>
   <div class="card">
     <img class="card__picture" src="./assets/images/photo-Ana.jpg" alt="Foto de Ana.">
     <div class="card__info">
