--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -40,8 +40,8 @@
   font-size: 24px;
   text-align: center;
   text-transform: uppercase;
-  padding-top: 50px;
-  padding-bottom: px;
+  padding-top: 80px;
+  padding-bottom: 30px;
   }
   &__text {
     text-align: center;
