fixing design details

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,21 +1,17 @@
 <header class="header">
   <h1 class="header__name">
-    <a href="./index.html" title="Rebirth" class="navegation__list"
-      >Rebirth Web</a
-    >
+    <a href="./index.html" title="Rebirth" class="navegation__list">Rebirth Web</a>
   </h1>
-  <nav>
+  <nav class="container__navegation">
     <ul class="navegation">
       <li>
-        <a href="#teamcontainer" title="Ir a Equipo" class="navegation__list"
-          >Equipo</a>
+        <a href="#teamcontainer" title="Ir a Equipo" class="navegation__list">Equipo</a>
       </li>
       <li>
         <a href="#about-us" title="Ir a Quienes Somos" class="navegation__list">Quienes Somos</a>
       </li>
       <li>
-        <a href="./contact.html" title="Ir a Contacto" class="navegation__list"
-          >Contacto</a>
+        <a href="./contact.html" title="Ir a Contacto" class="navegation__list">Contacto</a>
       </li>
     </ul>
   </nav>
