--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -5,6 +5,7 @@
     </div>
   </div>
 </section>
+
 <section class="teamcontainer">
   <div>
     <h2 class="teamcontainer__title">Equipo</h2>
@@ -22,24 +23,26 @@
     </p>
   </div>
 </section>
-<section class="container" id="container">
-  <div class="container__square"></div>
-  <div class="container__div0">
-    <div class="container__div0__div1">
-      <h3 class="container__name">Fortalezas</h3>
-      <p class="container__text">
-        La comunicación efectiva, confianza mutua,
-        respeto por la diversidad y apoyo mutuo son cinco de las fortalezas que crea la unión en un equipo de trabajo
-        como el nuestro. Es esencial para lograr nuestros objetivos.
-      </p>
+<section class="super-container">
+  <section class="container" id="container">
+    <div class="container__square"></div>
+    <div class="container__div0">
+      <div class="container__div0__div1">
+        <h3 class="container__name">Fortalezas</h3>
+        <p class="container__text">
+          La comunicación efectiva, confianza mutua,
+          respeto por la diversidad y apoyo mutuo son cinco de las fortalezas que crea la unión en un equipo de trabajo
+          como el nuestro. Es esencial para lograr nuestros objetivos.
+        </p>
+      </div>
+      <div class="div2">
+        <h3 class="container__name">Debilidades</h3>
+        <p class="container__text" id="about-us">
+          Siempre se puede mejorar, algunas podemos tener menos experiencia en ciertas áreas, miedo a tener un conflicto
+          por estar en desacuerdo, ser mas lentas o tener una organización diferente.
+          Pero ante todo somos un equipo y todas remamos hacia delante, si una se atasca el resto tira de ella.
+        </p>
+      </div>
     </div>
-    <div class="div2">
-      <h3 class="container__name">Debilidades</h3>
-      <p class="container__text" id="about-us">
-        Siempre se puede mejorar, algunas podemos tener menos experiencia en ciertas áreas, miedo a tener un conflicto
-        por estar en desacuerdo, ser mas lentas o tener una organización diferente.
-        Pero ante todo somos un equipo y todas remamos hacia delante, si una se atasca el resto tira de ella.
-      </p>
-    </div>
-  </div>
+  </section>
 </section>
