--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  background-color: pink;
   border: solid $cool-grey 1px;
   display: flex;
   align-items: center;
@@ -25,7 +26,6 @@
 
 @media (min-width: 768px){
   .footer__name {
-    
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     margin-left: 45px;
@@ -34,7 +34,6 @@
 }
 
 .footer__nav {
-  
   padding-top: 20px;
   display: flex;
 }
