--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -184,43 +184,43 @@
 
 
 
-.footer {
+.ffooter {
   display: flex;
   align-items: center;
   flex-direction: column;
   height: 250px;
 }
   
-  .footer__name {
+  .ffooter__name {
     font-family: $font-family-cards;
     color: $cool-grey;
     padding-top: 30px;
   }
   
-  .footer__nav {
+  .ffooter__nav {
     padding-top: 20px;
     display: flex;
   }
   
-  .footer__nav__ul {
+  .ffooter__nav__ul {
     font-family: $font-family-cards;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
-  .footer__item {
+  .ffooter__item {
     list-style: none;
     text-transform: uppercase;
     justify-content: center;
   }
   
-  .footer__link {
+  .ffooter__link {
     text-decoration: none;
     color: $gunmetal;
   }
   
-  .footer__img {
+  .ffooter__img {
     padding-top: 30px;
   }
   
