--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,10 +1,10 @@
 .footer {
   border: solid $cool-grey 1px;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   height: 250px;
+  justify-content: center;
 }
 
 @media (min-width: 768px){
@@ -94,11 +94,3 @@
   height: 45px;
   width: 115.9px;
 }
-
-
-
-
-
-
-
-
