--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,18 +1,19 @@
 .footer {
-  border: solid $cool-grey 1px;
+  border-top: solid $cool-grey 1px;
   display: flex;
   align-items: center;
   flex-direction: column;
   height: 250px;
   justify-content: center;
+  width: 100vw;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
   .footer {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    height: 170px ;
+    height: 170px;
   }
 }
 
@@ -21,10 +22,9 @@
   font-family: $font-family-cards;
   color: $cool-grey;
   align-items: end;
- 
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
   .footer__name {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -38,7 +38,7 @@
   display: flex;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
   .footer__nav {
     display: grid;
     grid-column: 2 / 3;
@@ -56,12 +56,11 @@
   align-items: center;
 }
 
-    @media (min-width: 768px){
-.footer__nav__ul{
-  align-items: flex-end;
-    }
-  
+@media (min-width: 768px) {
+  .footer__nav__ul {
+    align-items: flex-end;
   }
+}
 
 .footer__item {
   padding: 2px;
