--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -5,12 +5,14 @@
 
   <nav class="footer__nav">
     <ul class="footer__nav__ul">
-      <li class="footer__item"><a class="footer__link" href="#">Equipo</a></li>
       <li class="footer__item">
-        <a class="footer__link" href="#">Quiénes Somos</a>
+        <a class="footer__link" href="#teamcontainer">Equipo</a>
       </li>
       <li class="footer__item">
-        <a class="footer__link" href="#">Contacto</a>
+        <a class="footer__link" href="#about-us">Quiénes Somos</a>
+      </li>
+      <li class="footer__item">
+        <a class="footer__link" href="./contact.html">Contacto</a>
       </li>
     </ul>
   </nav>
