--- a/src/html/partials/team_adalabers.html
+++ b/src/html/partials/team_adalabers.html
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card__picture" src="./assets/images/photo-Andrea.jpg" alt="Foto de Ana.">
+    <img class="card__picture" src="./assets/images/photo-Andrea.jpg" alt="Foto de Andrea.">
     <div class="card__info">
       <h3 class="card__title">Andrea Diéguez Garrido</h3>
       <p class="card__description">Tengo 31 años y vengo de Valladolid. Estudié el Grado en Comercio y un Máster
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card__picture" src="./assets/images/photo-cris.jpeg" alt="Foto de Ana.">
+    <img class="card__picture" src="./assets/images/photo-cris.JPEG" alt="Foto de Cristina">
     <div class="card__info">
       <h3 class="card__title">Cristina Rodríguez García</h3>
       <p class="card__description">Soy de Madrid, tengo 32 años. Estudié Historia del Arte, pero he
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card__picture" src="./assets/images/photo-Raquel.jpg" alt="Foto de Ana.">
+    <img class="card__picture" src="./assets/images/photo-Raquel.jpg" alt="Foto de Raquel">
     <div class="card__info">
       <h3 class="card__title">Raquel Collado Herrera</h3>
       <p class="card__description">Soy de Madrid, tengo 34 años, tengo un grado medio en Gestión administrativa y
@@ -70,7 +70,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card__picture" src="./assets/images/photo-Silvia.jpg" alt="Foto de Ana.">
+    <img class="card__picture" src="./assets/images/photo-Silvia.jpg" alt="Foto de Silvia">
     <div class="card__info">
       <h3 class="card__title">Silvia Torres Cubero</h3>
       <p class="card__description">Soy de Barcelona y tengo 30 años.
