--- a/src/scss/layout/_team_adalabers.scss
+++ b/src/scss/layout/_team_adalabers.scss
@@ -80,6 +80,7 @@
     text-align: left;
     flex-direction: row;
     padding-left: 60px;
+    padding-bottom: 40px;
     gap: 30px;
   }
   .card:nth-child(odd) {
