added some space between content and footer in 1200px views

--- a/src/scss/layout/_team_adalabers.scss
+++ b/src/scss/layout/_team_adalabers.scss
@@ -95,6 +95,7 @@
     text-align: left;
     flex-direction: row;
     padding-left: 160px;
+    padding-bottom: 40px;
     gap: 30px;
   }
   .card:nth-child(odd) {
